syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.w4t3rcs.python.proto";
option java_outer_classname = "PythonProto";

service PythonService {
  rpc SendCode(PythonRequest) returns (PythonResponse) {}
}

message PythonRequest {
  string script = 1;
}

message PythonResponse {
  string result = 1;
}